# jellytent

./: .gitignore  CHANGELOG.md  README.md  TODO.md  package.json  tsconfig.json
.github/workflows/: ci.yml
deploy/helm/jellytent/: Chart.yaml  values.yaml
deploy/helm/jellytent/templates/: deployment.yaml
deploy/k8s/: deployment.yaml
docker/: Dockerfile
native/audio-processor/: Cargo.toml
native/audio-processor/src/: lib.rs
python/: pyproject.toml
python/jellytent_ml/: __init__.py  nlu.py  stt.py  tts.py
python/tests/: test_stt.py
src/: index.ts
src/avatar/: engine.ts
src/core/: agent.ts  jellytent.ts
src/experimental/: emotion.ts  webrtc-transport.ts
src/llm/: client.ts
src/memory/: conversation.ts  manager.ts
src/observability/: metrics.ts  tracing.ts
src/plugins/: manager.ts  types.ts
src/transport/: websocket.ts
src/types/: index.ts
src/utils/: logger.ts
src/voice/: pipeline.ts  vad.ts  wasm-loader.ts
tests/: agent.test.ts  vad.test.ts
tests/unit/: avatar.test.ts  emotion.test.ts  jellytent.test.ts  memory.test.ts
