[package]
name = "audio-processor"
version = "0.1.0"
edition = "2021"
authors = ["JellyJelly Audio Team <audio@jellyjelly.io>"]
description = "High-performance audio processing for Jellytent"
license = "LicenseRef-Proprietary"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
