[package]
name = "audio-processor"
version = "0.4.0"
edition = "2021"
authors = ["JellyJelly Audio Team <audio@jellyjelly.io>"]
description = "High-performance audio processing for Jellytent"
license = "LicenseRef-Proprietary"
repository = "https://github.com/jellyjelly/jellytent"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["simd"]
simd = []

[dependencies]
wasm-bindgen = "0.2.89"

[dev-dependencies]
wasm-bindgen-test = "0.3.39"
criterion = "0.5"

[[bench]]
name = "audio_bench"
harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
opt-level = 3
